--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ bs4 = "==0.0.1"
 certifi = "==2021.5.30"
 charset-normalizer = "==2.0.2"
 click = "==8.0.1"
+gunicorn = "*"
 idna = "==3.2"
 itsdangerous = "==2.0.1"
 pytz = "==2021.1"
