--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,18 @@ bs4 = "==0.0.1"
 certifi = "==2021.5.30"
 charset-normalizer = "==2.0.2"
 click = "==8.0.1"
+google-api-core = ">=1.26.3"
+google-api-python-client = ">=2.2.0"
+google-auth = "*"
+google-auth-oauthlib = "*"
+gspread = "*"
+gspread-dataframe = "*"
 gunicorn = "*"
 idna = "==3.2"
 itsdangerous = "==2.0.1"
+numpy = "*"
+oauthlib = "*"
+pandas = "*"
 pytz = "==2021.1"
 requests = "==2.26.0"
 six = "==1.16.0"
