--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ oauthlib = "*"
 pandas = "*"
 pytz = "==2021.1"
 requests = "==2.26.0"
+selenium = ">=3.141.0"
 six = "==1.16.0"
 soupsieve = "==2.2.1"
 tzlocal = "==2.1"
