trying selenium POC

--- a/Pipfile
+++ b/Pipfile
@@ -4,31 +4,31 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-certifi = "==2021.5.30"
-charset-normalizer = "==2.0.2"
-click = "==8.0.1"
+bs4 = ">=0.0.1"
+certifi = ">=2021.5.30"
+charset-normalizer = ">=2.0.2"
+click = ">=8.0.1"
 google-api-core = ">=1.26.3"
 google-api-python-client = ">=2.2.0"
 google-auth = "*"
 google-auth-oauthlib = "*"
 gspread = "*"
 gspread-dataframe = "*"
-idna = "==3.2"
-itsdangerous = "==2.0.1"
+idna = ">=3.2"
+itsdangerous = ">=2.0.1"
 numpy = "*"
 oauthlib = "*"
 pandas = "*"
-pytz = "==2021.1"
-requests = "==2.26.0"
+pytz = ">=2021.1"
+requests = ">=2.26.0"
 selenium = ">=3.141.0"
-six = "==1.16.0"
-soupsieve = "==2.2.1"
-tzlocal = "==2.1"
-urllib3 = "==1.26.6"
-APScheduler = "==3.7.0"
-Jinja2 = "==3.0.1"
-MarkupSafe = "==2.0.1"
-Werkzeug = "==2.0.1"
+six = ">=1.16.0"
+soupsieve = ">=2.2.1"
+tzlocal = ">=2.1"
+urllib3 = ">=1.26.6"
+APScheduler = ">=3.7.0"
+MarkupSafe = ">=2.0.1"
+Werkzeug = ">=2.0.1"
 
 [dev-packages]
 
