add Pillow to pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ itsdangerous = ">=2.0.1"
 numpy = "*"
 oauthlib = "*"
 pandas = "*"
+Pillow = ">=8.2.0"
 pytz = ">=2021.1"
 requests = ">=2.26.0"
 selenium = ">=3.141.0"
